--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,25 +12,33 @@
         android:id="@+id/settings_header"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:text="Log Tracker"
-        android:textSize="50dp"
+        android:text="@string/log_tracker"
+        android:textSize="50sp"
         android:textAlignment="center"/>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content">
+
+<androidx.cardview.widget.CardView
+        android:id="@+id/email_text_input_wrapper"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:id="@+id/email_text_input_layout"
+            android:layout_width="400dp"
+            android:layout_height="250dp"
+            app:endIconMode="clear_text">
+            </com.google.android.material.textfield.TextInputLayout>
+</androidx.cardview.widget.CardView>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Add" />
-        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
 
@@ -39,47 +47,53 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="200dp" />
+        <!--
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addemailbtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_weight="0"
-            android:layout_gravity="center"
-            android:clickable="true"
-            app:srcCompat="@android:drawable/ic_input_add" />
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/addemailbtn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:clickable="true"
+
+                    android:padding="10dp"
+                    app:srcCompat="@android:drawable/ic_input_add"
+                    android:contentDescription="@string/add_email" />
+        !-->
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:padding="10dp">
 
 
-    </LinearLayout>
+                <Button
+                    android:id="@+id/savebtn"
+                    android:layout_width="200dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="start"
+                    android:text="@string/add"
+                    android:padding="40dp"
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+                    />
 
+                <Button
+                    android:id="@+id/closebtn"
+                    android:layout_width="200dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="end"
+                    android:padding="40dp"
+                    android:text="@string/home"
+                    android:textColor="@color/black"
 
-        <Button
-            android:id="@+id/savebtn"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_gravity="left"
-            android:hint="Add"
-            android:padding="40dp"
-            />
-
-        <Button
-            android:id="@+id/closebtn"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_gravity="right"
-            android:padding="40dp"
-            android:hint="Home"
-
-            />
-    </LinearLayout>
-</LinearLayout>
+                     />
+            </LinearLayout>
+        </LinearLayout>
 
 
