--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_centerHorizontal="true"
-    tools:context=".MainActivity">
+    tools:context=".SettingsActivity">
 
     <TextView
         android:id="@+id/settings_header"
