--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,7 +23,7 @@
 
 <androidx.cardview.widget.CardView
         android:id="@+id/email_text_input_wrapper"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,12 +31,12 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email_text_input_layout"
-            android:layout_width="400dp"
-            android:layout_height="250dp"
-            app:endIconMode="clear_text">
-            </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/email_text_input_layout"
+        android:layout_width="413dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:endIconMode="clear_text" />
 </androidx.cardview.widget.CardView>
 
     </LinearLayout>
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--
+
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/addemailbtn"
@@ -56,13 +56,15 @@
                     android:layout_gravity="center"
                     android:clickable="true"
 
-                    android:padding="10dp"
+                    android:padding="40dp"
                     app:srcCompat="@android:drawable/ic_input_add"
                     android:contentDescription="@string/add_email" />
-        !-->
+
                 <ListView
+                    android:id="@+id/list_options"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp" />
+                    android:layout_height="wrap_content"
+                    android:entries="@id/list_options"/>
             </LinearLayout>
 
             <LinearLayout
@@ -73,7 +75,7 @@
                 android:padding="10dp">
 
 
-                <Button
+              <!--  <Button
                     android:id="@+id/savebtn"
                     android:layout_width="200dp"
                     android:layout_height="80dp"
@@ -82,7 +84,7 @@
                     android:padding="40dp"
 
                     />
-
+<!-->
                 <Button
                     android:id="@+id/closebtn"
                     android:layout_width="200dp"
